--- a/content/blog/my-first-post.mdx
+++ b/content/blog/my-first-post.mdx
@@ -6,7 +6,7 @@ readTime: 5
 category: "ওয়েব ডেভেলপমেন্ট"
 tags: ["React", "Next.js", "বাংলা"]
 excerpt: "এটি আমার প্রথম ব্লগ পোস্ট। এখানে আমি Next.js এবং MDX ব্যবহার করে কিভাবে একটি ব্লগ তৈরি করা যায় তা নিয়ে আলোচনা করব।"
-featuredImage: "https://via.placeholder.com/1200x630.png?text=Featured+Image"
+featuredImage: "https://vercel.com/vc-ap-vercel-marketing/_next/image?url=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Fcontentful%2Fimage%2Fe5382hct74si%2F2Z9UUDbUy5A0dMhrhS2umH%2F4c3239c3bb12aaefa5008306566806dd%2FLogotype-Dark__1_.png&w=1920&q=75"
 banner:
   image: "https://via.placeholder.com/1920x1080.png?text=Banner+Image"
   alt: "একটি সুন্দর ব্যানার"
