--- a/content/blog/my-first-post.mdx
+++ b/content/blog/my-first-post.mdx
@@ -8,7 +8,7 @@ tags: ["React", "Next.js", "বাংলা"]
 excerpt: "এটি আমার প্রথম ব্লগ পোস্ট। এখানে আমি Next.js এবং MDX ব্যবহার করে কিভাবে একটি ব্লগ তৈরি করা যায় তা নিয়ে আলোচনা করব।"
 featuredImage: "https://vercel.com/vc-ap-vercel-marketing/_next/image?url=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Fcontentful%2Fimage%2Fe5382hct74si%2F2Z9UUDbUy5A0dMhrhS2umH%2F4c3239c3bb12aaefa5008306566806dd%2FLogotype-Dark__1_.png&w=1920&q=75"
 banner:
-  image: "https://via.placeholder.com/1920x1080.png?text=Banner+Image"
+  image: "https://vercel.com/vc-ap-vercel-marketing/_next/image?url=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Fcontentful%2Fimage%2Fe5382hct74si%2F2Z9UUDbUy5A0dMhrhS2umH%2F4c3239c3bb12aaefa5008306566806dd%2FLogotype-Dark__1_.png&w=1920&q=75"
   alt: "একটি সুন্দর ব্যানার"
 seo:
   description: "Next.js এবং MDX ব্যবহার করে কিভাবে একটি সুন্দর, দ্রুত এবং SEO-ফ্রেন্ডলি ব্লগ তৈরি করা যায় তার একটি বিস্তারিত গাইড।"
