--- a/content/blog/my-first-post.mdx
+++ b/content/blog/my-first-post.mdx
@@ -13,7 +13,7 @@ banner:
 seo:
   description: "Next.js এবং MDX ব্যবহার করে কিভাবে একটি সুন্দর, দ্রুত এবং SEO-ফ্রেন্ডলি ব্লগ তৈরি করা যায় তার একটি বিস্তারিত গাইড।"
   keywords: ["Next.js", "MDX", "React", "Blog", "Web Development"]
-  ogImage: "https://via.placeholder.com/1200x630.png?text=OG+Image"
+  ogImage: "https://vercel.com/vc-ap-vercel-marketing/_next/image?url=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Fcontentful%2Fimage%2Fe5382hct74si%2F2Z9UUDbUy5A0dMhrhS2umH%2F4c3239c3bb12aaefa5008306566806dd%2FLogotype-Dark__1_.png&w=1920&q=75"
   canonicalUrl: "https://likhonsheikh.github.io/blog/my-first-post"
   publishDate: "2025-10-16T10:00:00Z"
   modifiedDate: "2025-10-16T15:00:00Z"
